dev-k8s.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dev
  name: invites
  labels:
    purpose: dev
    app: invites
spec:
  replicas: 1
  selector:
    matchLabels:
      app: invites

  template:
    metadata:
      labels:
        app: invites

    spec:
      serviceAccountName: invites
      containers:
        - name: invites
          image: invites
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  namespace: dev
  name: invites
  labels:
    app: invites
    service: invites
  annotations:
    ingress.kubernetes.io/service-upstream: "true"
spec:
  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
      name: http
  selector:
    app: invites

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: invites
  namespace: dev
  annotations:
    konghq.com/strip-path: "true"
    konghq.com/preserve-host: "false"
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /invites
            pathType: ImplementationSpecific
            backend:
              service:
                name: invites
                port:
                  number: 4000
